# quack-discord-bot

./: .breakpoints  foods.txt  help.txt  jorge.txt  main.py  personalized_message.txt  player.py  players.txt  pyproject.toml  quack_service.py  replit_db_crud.py  slimes.txt  whiskey.txt
.cache/replit/: __replit_disk_meta.json
