[tool.poetry]
name = "quack-discord-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^2.0.0"
discord = "^1.0.1"
flask = "^1.1.2"
yahoo-fin = "^0.8.7"
lxml = "^4.6.2"
aiocron = "^1.4"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
